--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -30,3 +30,10 @@
     margin-top: 20px;
     display: inline-block;
   }
+  #showPassword
+  {
+    font-size: 20px;
+    position:relative;
+ top: 20px;
+ left: -30px;
+  }
